src/objects/Quality_Assurance__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quality Assurance Reports</relationshipLabel>
        <relationshipName>Quality_Assurance_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_got_consent_to_change_Personal_Inf__c</fullName>
        <inlineHelpText>DID AGENT OBTAIN CONSENT FROM CUSTOMER TO MAKE A CHANGE TO PERSONAL DATA. E.g address, bank details etc</inlineHelpText>
        <label>Agent got consent to change Personal Inf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Borrower_Lender__c</fullName>
        <label>Borrower/Lender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Percent__c</fullName>
        <formula>Call_Score__c / 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Call_Score__c</fullName>
        <formula>IF(ISPICKVAL(X1_Agent_mentioned_the_company_name__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Did_the_agent_mention_his_her_name__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(Did_the_agent_confirm_callers_name__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X4_Did_the_agent_confirm_callers_usernam__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X5_Did_agent_confirm_customers_DOB__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X6_Agent_confirmed_postcode_and_1st_Line__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X7_Agent_address_customer_query__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X8_Agent_offered_all_relevant_info__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X9_Agent_gave_exception_customer_service__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X10_Was_the_customer_pleased__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X24_Agent_added_relevant_notes_to_admin__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X11_Agent_offered_best_solution__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X12_Agent_Answered_Questions_Correctly__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X14_Agent_used_correct_on_hold_procedure__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X13_Agent_avoided_giving_finance_advice__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X15_Correct_call_transfer_used__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X16_Agent_offered_further_assistance__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X17_Agent_closed_call_appropriately__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X18_Agent_avoided__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X19_Agent_displayed_professional_manner__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X20_Agent_was_clear_and_confident__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X21_Agent_sounded_friendly_polite__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X22_Agent_used_effective_questioning__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X23_Was_the_call_compliant__c, &quot;Fail&quot;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Case__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Quality Assurance Reports</relationshipLabel>
        <relationshipName>Quality_Assurance_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Development_Call_Percent__c</fullName>
        <formula>Client_Development_Call_Score__c  / 21</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Development Call Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client_Development_Call_Score__c</fullName>
        <formula>IF(ISPICKVAL(X1_Agent_mentioned_the_company_name__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Did_the_agent_mention_his_her_name__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(Did_the_agent_confirm_callers_name__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(X4_Did_the_agent_confirm_callers_usernam__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( X5_Did_the_agent_mention_the_call_reason__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( X6_The_agent_didn_t_disclose_secure_info__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( X8_Agent_offered_all_relevant_info__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(X13_Agent_avoided_giving_finance_advice__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(X16_Agent_offered_further_assistance__c, &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( X9_Agent_gave_exception_customer_service__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( X24_Agent_added_relevant_notes_to_admin__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( X11_Agent_offered_best_solution__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( X12_Agent_Answered_Questions_Correctly__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( X14_Agent_displayed_active_listening__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL( X17_Agent_closed_call_appropriately__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  X18_Agent_avoided__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  X19_Agent_displayed_professional_manner__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  X20_Agent_was_clear_and_confident__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  X21_Agent_sounded_friendly_polite__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL(   X22_Agent_communicated_correct_attitude__c   , &quot;Fail&quot;),0,1)+  
IF(ISPICKVAL(X23_Was_the_call_compliant__c, &quot;Fail&quot;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Development Call Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compliance_Status__c</fullName>
        <formula>IF(OR(ISPICKVAL(X15_Compliance__c,&quot;Fail&quot;),ISPICKVAL(X23_Was_the_call_compliant__c,&quot;Fail&quot;)),&quot;Fail&quot;,&quot;Pass&quot;)</formula>
        <label>Compliance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_of_Call__c</fullName>
        <label>Date and Time of Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Did_the_agent_confirm_callers_name__c</fullName>
        <label>3. Did the agent confirm callers name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_agent_mention_his_her_name__c</fullName>
        <label>2. Did the agent mention his/her name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Percent__c</fullName>
        <formula>Email_Score__c / 15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email_Score__c</fullName>
        <formula>IF(ISPICKVAL(X1_Data_Protection_Unauthorised_Sending__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X2_Greeting_Correct_Greeting_Used__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X3_Thanks_for_email__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X4_Solution_Explantion__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X5_Process_Updates_Explains_actions__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X6_Process_Updates_Escalation_Process__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X7_Process_Updates_Task_Completion__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X8_Process_Updates_Timeframes__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X9_Closure_Additional_Assistance__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X10_Customer_Experience_Extra_Mile__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X11_Customer_Experience_Grammar_etc__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X12_Customer_Experience_Language__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X13_Customer_Experience_Rationale__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X14_Customer_Experience_Future_Solutio__c, &quot;No&quot;),0,1)+
IF(ISPICKVAL(X15_Compliance__c, &quot;Fail&quot;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Percent__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;Call_Report&apos; , Call_Percent__c,  IF(RecordType.DeveloperName = &apos;Client_Development_Call&apos;,  2 , Email_Percent__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Open_Year_Month__c</fullName>
        <formula>TEXT(year(datevalue(CreatedDate))) &amp; &quot;-&quot; &amp; if(MONTH(datevalue(CreatedDate))&gt;9,TEXT(MONTH(datevalue(CreatedDate))),&quot;0&quot; &amp; TEXT(MONTH(datevalue(CreatedDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Year-Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_changes_made_accurately__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested changes made accurately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quality_Assurance_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X10_Comments__c</fullName>
        <description>Did the agent go the extra mile and deliver excellent customer service?</description>
        <inlineHelpText>Did the agent go the extra mile and deliver excellent customer service?</inlineHelpText>
        <label>10. Comments</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X10_Customer_Experience_Extra_Mile__c</fullName>
        <description>Did the agent go the extra mile and deliver excellent customer service?</description>
        <inlineHelpText>Did the agent go the extra mile and deliver excellent customer service?</inlineHelpText>
        <label>10. Goes the extra mile to deliver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X10_Was_the_customer_pleased__c</fullName>
        <label>10. Was the customer pleased</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X11_Agent_offered_best_solution__c</fullName>
        <label>11. Agent offered best solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X11_Comments__c</fullName>
        <description>Uses correct grammar, spelling and phrasing</description>
        <inlineHelpText>Uses correct grammar, spelling and phrasing</inlineHelpText>
        <label>11. Comments</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X11_Customer_Experience_Grammar_etc__c</fullName>
        <description>Uses correct grammar, spelling and phrasing</description>
        <inlineHelpText>Uses correct grammar, spelling and phrasing</inlineHelpText>
        <label>11. Uses correct grammar and spelling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X12_Agent_Answered_Questions_Correctly__c</fullName>
        <label>12. Agent Answered Questions Correctly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X12_Comments__c</fullName>
        <description>Uses positive, professional language and appropriate tone throughout. Avoids jargon and company specific 
terms. Uses Full Company Name throughout</description>
        <inlineHelpText>Uses positive, professional language and appropriate tone throughout. Avoids jargon and company specific 
terms. Uses Full Company Name throughout</inlineHelpText>
        <label>12. Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X12_Customer_Experience_Language__c</fullName>
        <description>Uses positive, professional language and appropriate tone throughout. Avoids jargon and company specific 
terms. Uses Full Company Name throughout</description>
        <inlineHelpText>Uses positive, professional language and appropriate tone throughout. Avoids jargon and company specific 
terms. Uses Full Company Name throughout</inlineHelpText>
        <label>12. Customer Experience - Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X13_Agent_avoided_giving_finance_advice__c</fullName>
        <label>13. Agent avoided giving finance advice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X13_Customer_Experience_Rationale__c</fullName>
        <description>Provides rationale behind why we require certain information?</description>
        <inlineHelpText>Provides rationale behind why we require certain information?</inlineHelpText>
        <label>13. Customer Experience - Rationale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X14_Agent_displayed_active_listening__c</fullName>
        <label>14. Agent displayed active listening</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>X14_Agent_used_correct_on_hold_procedure__c</fullName>
        <label>14. Agent used correct on hold procedure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X14_Customer_Experience_Future_Solutio__c</fullName>
        <description>Did we explain how to do this online in future?</description>
        <inlineHelpText>Did we explain how to do this online in future?</inlineHelpText>
        <label>14. Customer Experience - Future Solutio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X15_Compliance__c</fullName>
        <description>Was the email compliant?</description>
        <inlineHelpText>Was the email compliant?</inlineHelpText>
        <label>15. Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X15_Correct_call_transfer_used__c</fullName>
        <label>15. Correct call transfer used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X16_Agent_offered_further_assistance__c</fullName>
        <label>16. Agent offered further assistance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X17_Agent_closed_call_appropriately__c</fullName>
        <label>17. Agent closed call appropriately</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Agent_avoided__c</fullName>
        <label>18. Agent avoided interrupting customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X19_Agent_displayed_professional_manner__c</fullName>
        <label>19. Agent displayed professional manner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1_Agent_mentioned_the_company_name__c</fullName>
        <description>Did the agent mention the company name?</description>
        <label>1. Agent mentioned the company name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1_Data_Protection_Unauthorised_Sending__c</fullName>
        <description>Doesn&apos;t send details about the account to an unauthorised person or replies to the incorrect e-mail address</description>
        <inlineHelpText>Doesn&apos;t send details about the account to an unauthorised person or replies to the incorrect e-mail address</inlineHelpText>
        <label>1. Doesn&apos;t send unauthorised information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X20_Agent_was_clear_and_confident__c</fullName>
        <label>20. Agent was clear and confident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X21_Agent_sounded_friendly_polite__c</fullName>
        <label>21. Agent sounded friendly/polite</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X22_Agent_communicated_correct_attitude__c</fullName>
        <label>22. Agent communicated correct attitude</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X22_Agent_used_effective_questioning__c</fullName>
        <label>22. Agent used effective questioning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X23_Was_the_call_compliant__c</fullName>
        <label>23. Was the call compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X24_Agent_added_relevant_notes_to_admin__c</fullName>
        <description>Did the agent make the relevant notes on admin comments?
Including;Debit card payments &amp; Collections calls</description>
        <label>24. Agent added relevant notes to admin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2_Greeting_Correct_Greeting_Used__c</fullName>
        <description>Uses the correct greeting with the customers name</description>
        <inlineHelpText>Uses the correct greeting with the customers name</inlineHelpText>
        <label>2. Correct Greeting Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3_Asked_contact_earliest_convenenience__c</fullName>
        <label>3. Asked contact earliest convenenience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3_Thanks_for_email__c</fullName>
        <inlineHelpText>Thanks the customer for his/her e-mail</inlineHelpText>
        <label>3. Thanks for email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X4_Correct_Number_provided_to_customer__c</fullName>
        <label>4. Correct Number provided to customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>X4_Did_the_agent_confirm_callers_usernam__c</fullName>
        <label>4. Agent confirmed caller username/email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X4_Solution_Explantion__c</fullName>
        <inlineHelpText>Offers correct solution/explanation</inlineHelpText>
        <label>4. Solution Explantion Correct</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X5_Did_agent_confirm_customers_DOB__c</fullName>
        <label>5. Did agent confirm customers DOB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X5_Did_the_agent_mention_the_call_reason__c</fullName>
        <label>5. Did the agent mention the call reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>X5_Process_Updates_Explains_actions__c</fullName>
        <description>Explains the importance of certain actions to the customer.</description>
        <inlineHelpText>Explains the importance of certain actions to the customer.</inlineHelpText>
        <label>5. Explains the importance of actions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X6_Agent_confirmed_postcode_and_1st_Line__c</fullName>
        <label>6. Agent confirmed postcode and 1st Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X6_Process_Updates_Escalation_Process__c</fullName>
        <description>Follows the correct process for escalation</description>
        <inlineHelpText>Follows the correct process for escalation</inlineHelpText>
        <label>6. Follows correct escalation process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X6_The_agent_didn_t_disclose_secure_info__c</fullName>
        <label>6. The agent didn&apos;t disclose secure info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>X7_Agent_address_customer_query__c</fullName>
        <label>7. Agent address customer query</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X7_Process_Updates_Task_Completion__c</fullName>
        <description>Completes all tasks relevant to the e-mail</description>
        <inlineHelpText>Completes all tasks relevant to the e-mail</inlineHelpText>
        <label>7. Agent Completes all tasks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>